# sec-issue-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  USAGE.md  demo_extract.py  docker-compose.yml  pyproject.toml  requirements.txt  socket_app.py
.github/workflows/: ci.yml  docker-publish.yml
charts/sec-issue-bot/: Chart.yaml  values.yaml
charts/sec-issue-bot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
docs/: DEPLOYMENT.md
incident_agent/: __init__.py  extract.py  jira_client.py  messages.py  render.py  schema.py  utils.py
src/incident_agent/: __init__.py  extract.py  google_client.py  jira_client.py  messages.py  render.py  schema.py  utils.py
